--- a/writeup/theory.tex
+++ b/writeup/theory.tex
@@ -86,7 +86,7 @@ instance $n^2 + n + \ln n = \Theta(n^2)$.
 \section{Algorithms and Determinism}
 
 Our basic notion is of an \emph{algorithm} over a finite alphabet $\Sigma$,
-usually $\bin$. An algorithm $\cA$ is intuitively some set of steps which take
+usually $\ZZ_2$. An algorithm $\cA$ is intuitively some set of steps which take
 an input word $x$ over $\Sigma$, perform some transformations, and output
 another word $\cA(x)$ over $\Sigma$. An algorithm may have certain \emph{side
 effects}, such as sending a message or logging a string, and its behavior may
