--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -737,4 +737,26 @@
 }
 
 
+@article{hastad-1999,
+	author = {H\r{a}stad, Johan and Impagliazzo, Russell and Levin, Leonid A. and
+	          Luby, Michael},
+	title = {A Pseudorandom Generator from any One-way Function},
+	journal = {SIAM Journal on Computing},
+	volume = {28},
+	number = {4},
+	pages = {1364-1396},
+	year = {1999},
+	doi = {10.1137/S0097539793244708},
+	URL = { https://doi.org/10.1137/S0097539793244708 },
+	eprint = { https://doi.org/10.1137/S0097539793244708 },
+	abstract = { Pseudorandom generators are fundamental to many theoretical and
+	            applied aspects of computing. We show how to construct a
+	            pseudorandom generator from any one-way function. Since it is easy
+	            to construct a one-way function from a pseudorandom generator, this
+	            result shows that there is a pseudorandom generator if and only if
+	            there is a one-way function. },
+}
+
+
+
 
